rhdlc/test/compile-fail/scope/use-mod-super-mod/top.rhdl
mod a {}

use a::super::a;
